test/typecheck/errors/bad-identifier4.boa
f := function(int: _abc) : bool { return true; };
